WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305897
[IFC] Crash in EllipsisBoxPainter::paint when inline content had partial layout
https://bugs.webkit.org/show_bug.cgi?id=305897
Summary
[IFC] Crash in EllipsisBoxPainter::paint when inline content had partial layout
alan
Reported
2026-01-20 17:56:44 PST
<
rdar://168453702
>
Attachments
[fast-cq]Patch
(7.36 KB, patch)
2026-01-20 18:11 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-01-20 18:11:16 PST
Created
attachment 478084
[details]
[fast-cq]Patch
EWS
Comment 2
2026-01-21 05:16:59 PST
Committed
305937@main
(1f89cbb0564a): <
https://commits.webkit.org/305937@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478084
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug